force-app/main/default/objects/OpportunityLineItem/fields/AVA_SFCLOUD__Sales_Tax_Details__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__Sales_Tax_Details__c</fullName>
    <description>Displays broken down rates for the tax amount.</description>
    <inlineHelpText>Displays broken down rates for the tax amount.</inlineHelpText>
    <label>Sales Tax Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>