force-app/main/default/objects/OpportunityLineItem/fields/AVA_SFCLOUD__Tax_Override__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__Tax_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the amount updated in Sales Tax Amount field shall be updated as Tax amount for this line. Ensure Allow Tax Override in AvaTax for Salesforce configuration is also checked.</description>
    <inlineHelpText>If checked, the amount updated in Sales Tax Amount field shall be updated as Tax amount for this line. Ensure Allow Tax Override in AvaTax for Salesforce configuration is also checked.</inlineHelpText>
    <label>Tax Override</label>
    <type>Checkbox</type>
</CustomField>