force-app/main/default/objects/OpportunityLineItem/fields/CO_Tax_Reference__c.field-meta.xml
<CustomField>
    <fullName>CO_Tax_Reference__c</fullName>
    <label>CO Tax Reference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>