force-app/main/default/objects/OpportunityLineItem/fields/colorado_delivery_fee__c.field-meta.xml
<CustomField>
    <fullName>colorado_delivery_fee__c</fullName>
    <defaultValue>(0.28)</defaultValue>
    <label>colorado delivery fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>