force-app/main/default/objects/OpportunityLineItem/fields/Inventory_Available__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Available__c</fullName>
    <formula>if( Inventory_Checked__c = TRUE ||  PricebookEntry.Product2.ProductCode = &apos;Shipping&apos;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Available ?</label>
    <type>Checkbox</type>
</CustomField>