force-app/main/default/objects/OpportunityLineItem/fields/Inventory_Checked__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inventory Checked</label>
    <type>Checkbox</type>
</CustomField>