force-app/main/default/objects/OpportunityLineItem/fields/Is_Inventory_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Inventory_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Inventory Available ?</label>
    <type>Checkbox</type>
</CustomField>