force-app/main/default/objects/OpportunityLineItem/fields/Landed_Cost__c.field-meta.xml
<CustomField>
    <fullName>Landed_Cost__c</fullName>
    <formula>PricebookEntry.Product2.Landed_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landed Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>