force-app/main/default/objects/OpportunityLineItem/fields/Line_Item_Weight__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Weight__c</fullName>
    <formula>PricebookEntry.Product2.Product_Weight__c * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>