force-app/main/default/objects/OpportunityLineItem/fields/Margin_Cost__c.field-meta.xml
<CustomField>
    <fullName>Margin_Cost__c</fullName>
    <formula>(UnitPrice - ( Last_Price_Paid__c +  Landed_Cost__c +  BOM_Costs__c ))/UnitPrice</formula>
    <label>Margin Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>