force-app/main/default/objects/OpportunityLineItem/fields/rootstock__oppprod_duedate__c.field-meta.xml
<CustomField>
    <fullName>rootstock__oppprod_duedate__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>