force-app/main/default/objects/OpportunityLineItem/fields/rootstock__oppprod_productexist__c.field-meta.xml
<CustomField>
    <fullName>rootstock__oppprod_productexist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rootstock Product Exist</label>
    <type>Checkbox</type>
</CustomField>