force-app/main/default/objects/OpportunityLineItem/fields/rootstock__oppprod_quantityMessage__c.field-meta.xml
<CustomField>
    <fullName>rootstock__oppprod_quantityMessage__c</fullName>
    <label>Message</label>
    <length>100</length>
    <type>Text</type>
</CustomField>