force-app/main/default/objects/OpportunityLineItem/fields/rootstock__oppprod_sydim__c.field-meta.xml
<CustomField>
    <fullName>rootstock__oppprod_sydim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Dim Value</label>
    <referenceTo>rstk__sydim__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>