force-app/main/default/objects/OpportunityLineItem/fields/rstk__oppprod_iccomcod__c.field-meta.xml
<CustomField>
    <fullName>rstk__oppprod_iccomcod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Inventory Commodity Code</description>
    <label>Inventory Commodity Code</label>
    <referenceTo>rstk__iccomcod__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>oppprods</relationshipName>
    <type>Lookup</type>
</CustomField>