force-app/main/default/objects/OpportunityLineItem/fields/rstk__oppprod_pricesrce__c.field-meta.xml
<CustomField>
    <fullName>rstk__oppprod_pricesrce__c</fullName>
    <description>Price Source</description>
    <label>Price Source</label>
    <length>6</length>
    <type>Text</type>
</CustomField>