force-app/main/default/objects/OpportunityLineItem/fields/rstk__oppprod_project__c.field-meta.xml
<CustomField>
    <fullName>rstk__oppprod_project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Project Master associated with this Opportunity line</description>
    <inlineHelpText>The Project Master associated with this Opportunity line</inlineHelpText>
    <label>Project</label>
    <referenceTo>rstk__pjproj__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>