force-app/main/default/objects/OpportunityLineItem/fields/rstk__oppprod_socomm__c.field-meta.xml
<CustomField>
    <fullName>rstk__oppprod_socomm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Group</description>
    <label>Product Group</label>
    <referenceTo>rstk__socomm__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>oppprods</relationshipName>
    <type>Lookup</type>
</CustomField>