force-app/main/default/objects/OpportunityLineItem/fields/rstk__oppprod_width__c.field-meta.xml
<CustomField>
    <fullName>rstk__oppprod_width__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Width</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>