force-app/main/default/objects/OpportunityLineItem/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <formula>IF( ISBLANK(TEXT(Opportunity.Shipping_Method__c )) , &quot;&quot;,TEXT(Opportunity.Shipping_Method__c )&amp; &quot;- Shipping&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Method</label>
    <type>Text</type>
</CustomField>