force-app/main/default/objects/OpportunityLineItem/fields/Shipping_Product__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Product__c</fullName>
    <formula>ISPICKVAL(PricebookEntry.Product2.Family,&apos;Shipping&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Product</label>
    <type>Checkbox</type>
</CustomField>