force-app/main/default/objects/OpportunityLineItem/fields/Special_Order_Note__c.field-meta.xml
<CustomField>
    <fullName>Special_Order_Note__c</fullName>
    <label>Special Order Note</label>
    <type>TextArea</type>
</CustomField>