force-app/main/default/objects/OpportunityLineItem/fields/Special_Price__c.field-meta.xml
<CustomField>
    <fullName>Special_Price__c</fullName>
    <defaultValue>(0)</defaultValue>
    <label>Special Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>