force-app/main/default/objects/OpportunityLineItem/fields/Special_Price_Request__c.field-meta.xml
<CustomField>
    <fullName>Special_Price_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Price Request</label>
    <type>Checkbox</type>
</CustomField>