force-app/main/default/objects/OpportunityLineItem/fields/Total_with_tax__c.field-meta.xml
<CustomField>
    <fullName>Total_with_tax__c</fullName>
    <formula>TotalPrice  +  AVA_SFCLOUD__SalesTax_Line__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total with tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>