force-app/main/default/objects/OpportunityLineItem/validationRules/cannot_add_shippinglineitem.validationRule-meta.xml
<ValidationRule>
    <fullName>cannot_add_shippinglineitem</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Opportunity.HasOpportunityLineItem = FALSE ,  Product2.ProductCode = &quot;Shipping&quot;)</errorConditionFormula>
    <errorMessage>You cannot add ShippingLineItem without adding Products</errorMessage>
</ValidationRule>