force-app/main/default/objects/OpportunityLineItem/validationRules/Cant_Add_Products_After_Opp_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Add_Products_After_Opp_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
Opportunity.Lock_Opportunity__c
)</errorConditionFormula>
    <errorMessage>Can&apos;t add Products, when the Opportunity is Closed.</errorMessage>
</ValidationRule>