force-app/main/default/objects/OpportunityLineItem/validationRules/Error_if_GSK_product_has_Special_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Error_if_GSK_product_has_Special_Price</fullName>
    <active>true</active>
    <errorConditionFormula>Product2.GSK_Product__c = true &amp;&amp;  Special_Price_Request__c = TRUE</errorConditionFormula>
    <errorMessage>Special Price not applicable for GSK product</errorMessage>
</ValidationRule>