force-app/main/default/objects/OpportunityLineItem/validationRules/GSK_Product_for_Only_GSK_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>GSK_Product_for_Only_GSK_Customer</fullName>
    <active>true</active>
    <errorConditionFormula>Opportunity.GSK_Customer__c = FALSE &amp;&amp;  Product2.GSK_Product__c = TRUE</errorConditionFormula>
    <errorMessage>GSK Product is applicable for GSK Customer</errorMessage>
</ValidationRule>