force-app/main/default/objects/OpportunityLineItem/validationRules/If_SpclPrcPrd_exist_then_no_GSKPrd.validationRule-meta.xml
<ValidationRule>
    <fullName>If_SpclPrcPrd_exist_then_no_GSKPrd</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
Opportunity.GSK_Customer__c,
Opportunity.Special_Price_Order__c,
Product2.GSK_Product__c
),
AND(
Opportunity.GSK_Customer__c,
Opportunity.GSK_Product_Available__c,
Special_Price_Request__c  
)
)</errorConditionFormula>
    <errorMessage>You can&apos;t have both products, either GSK or Non-GSK with Special Price.</errorMessage>
</ValidationRule>